# santosobot

./: Cargo.toml  LICENSE  Makefile  README.md  dummy.rs  dummy_test.rs
src/: config.rs  main.rs
src/agent/: context.rs  memory.rs  mod.rs  mod.rs.backup
src/agent/tools/: brave_search.rs  filesystem.rs  message.rs  mod.rs  reminder.rs  shell.rs  spawn.rs  web.rs
src/bus/: events.rs  mod.rs
src/channels/: cli.rs  telegram.rs
src/providers/: mod.rs  types.rs
src/utils/: mod.rs
