[package]
name = "santosobot"
version = "0.1.0"
edition = "2021"
description = "Santoso - Ultra-Lightweight Personal AI Assistant"
authors = ["Santoso"]
license = "MIT"

[[bin]]
name = "santosobot"
path = "src/main.rs"

[[bin]]
name = "tool_test"
path = "tool_test.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
url = "2.5"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tokio-tungstenite = "0.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
